--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <noscript>
       <style>
         body {
-          background: #fc3f44;
+          background: #2395ff;
         }
         h1, h2, p {
           color: #fff;
