--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta property="og:site_name" content="shotastageのポートフォリオ">
+    <meta property="og:title" content="@shotastageのポートフォリオ">
+    <meta property="og:description" content="SFC16 政策メディア研究科 | RG NECO Swift, FlutterとGoが好きです. Bhaaとか http://l.pnstr.com とか http://tipstock.net 作ってます">
+    <meta property="og:url" content="https://shotach.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://shotach.com/images/avator.jpg">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>@shotastage</title>
