remove unused packages

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="SFC16 政策メディア研究科 | RG NECO Swift, FlutterとGoが好きです. Bhaaとか http://l.pnstr.com とか http://tipstock.net 作ってます"
     />
     <meta property="og:site_name" content="shotastageのポートフォリオ">
     <meta property="og:title" content="@shotastageのポートフォリオ">
@@ -56,7 +56,6 @@
         このページを見るには<strong>JavaScript</strong>を有効にする必要があります。
       </p>
     </noscript>
-    <!-- END CONTENTS -->
     <div id="root"></div>
   </body>
 </html>
