--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="SFC16 政策メディア研究科 | RG NECO Swift, FlutterとGoが好きです. Bhaaとか http://l.pnstr.com とか http://tipstock.net 作ってます"
     />
-    <meta property="og:site_name" content="shotastageのポートフォリオ">
-    <meta property="og:title" content="@shotastageのポートフォリオ">
-    <meta property="og:description" content="SFC16 政策メディア研究科 | RG NECO Swift, FlutterとGoが好きです. Bhaaとか http://l.pnstr.com とか http://tipstock.net 作ってます">
-    <meta property="og:url" content="https://shotach.com/">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://shotach.com/images/avator.jpg">
+    <meta property="og:site_name" content="shotastageのポートフォリオ" />
+    <meta property="og:title" content="@shotastageのポートフォリオ" />
+    <meta
+      property="og:description"
+      content="SFC16 政策メディア研究科 | RG NECO Swift, FlutterとGoが好きです. Bhaaとか http://l.pnstr.com とか http://tipstock.net 作ってます"
+    />
+    <meta property="og:url" content="https://shotach.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://shotach.com/images/avator.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>@shotastage</title>
@@ -26,10 +29,14 @@
         body {
           background: #2395ff;
         }
-        h1, h2, p {
+        h1,
+        h2,
+        p {
           color: #fff;
           margin-left: 1em;
-          font-family: 'Avenir','Helvetica Neue','Helvetica','Arial','Hiragino Sans','ヒラギノ角ゴシック',YuGothic,'Yu Gothic','メイリオ', Meiryo,'ＭＳ Ｐゴシック','MS PGothic';
+          font-family: 'Avenir', 'Helvetica Neue', 'Helvetica', 'Arial', 'Hiragino Sans',
+            'ヒラギノ角ゴシック', YuGothic, 'Yu Gothic', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック',
+            'MS PGothic';
         }
 
         h1 {
@@ -49,12 +56,8 @@
 
       <h1><strong>JavaScript</strong> is disabled!</h1>
 
-      <p>
-        You need to enable <strong>JavaScript</strong> to see this page.
-      </p>
-      <p>
-        このページを見るには<strong>JavaScript</strong>を有効にする必要があります。
-      </p>
+      <p>You need to enable <strong>JavaScript</strong> to see this page.</p>
+      <p>このページを見るには<strong>JavaScript</strong>を有効にする必要があります。</p>
     </noscript>
     <div id="root"></div>
   </body>
